<resources>
    <string name="app_name">MCBooks</string>
    <string name="welcome_mcbooks">Welcome to MCBooks</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="nav_learning_title">Learing</string>
    <string name="nav_mybook_title">My Books</string>
    <string name="nav_mygift_title">My Gifts</string>
    <string name="nav_notify_title">Notify</string>
    <string name="nav_setting_title">Setting</string>
    <string name="nav_mail_title">Mail</string>
    <string name="nav_fanpage_title">FanPage</string>
    <string name="nav_exit_title">Exit</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>

    <string name="your_infomation">Your information</string>
    <string name="name">Name</string>
    <string name="email" translatable="false">Email</string>
    <string name="telephone">Telephone</string>
    <string name="notification">Notify</string>

    <string name="add_new">Add New</string>
    <string name="enter_barcode">Enter barcode</string>
    <string name="no_notification">You have no notification</string>
    <string name="guide">Move the camera foward QR Code</string>
    <string name="licened" translatable="false">Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.</string>
    <string name="usage">Usage</string>
    <string name="detail">Detail</string>
    <string name="timetable">Timetable</string>
    <string name="add_timetable">Add</string>
    <string name="listen_book">Listen to this book</string>
    <string name="author">Author</string>
    <string name="continue_learing">Coutinue</string>
    <string name="general">General</string>
    <string name="study">Study</string>
    <string name="task">Task</string>
    <string name="all">All</string>
    <string name="audio" translatable="false">Audio</string>
    <string name="video" translatable="false">Video</string>
    <string name="ebook" translatable="false">Ebook</string>
    <string name="confirm">Do you want to exit?</string>
    <string name="no">No</string>
    <string name="exit">Exit</string>
</resources>
