<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_learning"
            android:icon="@drawable/ic_learning"
            android:title="@string/nav_learning_title"/>
        <item
            android:id="@+id/nav_mybook"
            android:icon="@drawable/ic_menu_mybooks"
            android:title="@string/nav_mybook_title"/>
        <item
            android:id="@+id/nav_mygift"
            android:icon="@drawable/ic_gift"
            android:title="@string/nav_mygift_title"/>
        <item
            android:id="@+id/nav_notify"
            android:icon="@drawable/ic_notify"
            android:title="@string/nav_notify_title"/>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/nav_setting_title"/>
        <item
            android:id="@+id/nav_mail"
            android:icon="@drawable/ic_menu_mail"
            android:title="@string/nav_mail_title"/>
        <item
            android:id="@+id/nav_fanpage"
            android:icon="@drawable/ic_menu_face"
            android:title="@string/nav_fanpage_title"/>
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/nav_exit_title"/>

    </group>


</menu>
