<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/usage"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:text="@string/guide"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/detail"
                    android:textAllCaps="false"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="15sp" />
            </LinearLayout>

            <com.esp.mcbooks.CustomLine
                android:layout_width="match_parent"
                android:layout_height="2sp"
                android:background="@android:color/darker_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20sp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timetable"
                    android:textSize="20sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textView2"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:background="@android:color/transparent"
                    android:padding="0dp"
                    android:text="@string/add_timetable"
                    android:textAllCaps="false"
                    android:textColor="@android:color/holo_blue_light" />

                <ListView
                    android:id="@+id/learing_timetable_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView2"></ListView>
            </RelativeLayout>

            <com.esp.mcbooks.CustomLine
                android:layout_width="match_parent"
                android:layout_height="2sp"
                android:background="@android:color/darker_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/listen_book"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView3"
                    android:layout_marginTop="10sp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/icon_part"
                        android:scaleType="fitXY"/>

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Part 1"
                        android:textSize="17sp"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center"/>
                    <ProgressBar
                        android:layout_weight="4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0/1"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />
                </LinearLayout>
            </RelativeLayout>
            <com.esp.mcbooks.CustomLine
                android:layout_width="match_parent"
                android:layout_height="2sp"
                android:background="@android:color/darker_gray" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20sp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/author"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Vũ Mai Phương"
                    android:layout_marginTop="20sp"
                    android:textSize="16sp"
                    android:textAlignment="center"/>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/colorMyApp"
                android:text="@string/continue_learing"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:textSize="16sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>