<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="30sp"
    tools:context="com.esp.mcbooks.SettingActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        app:civ_border_width="2sp"
        app:civ_border_color="@android:color/holo_blue_dark"
        android:src="@drawable/dienoccho"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        android:text="@string/your_infomation"
        android:textSize="24sp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="10sp"
        android:background="@drawable/line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15sp"
        android:paddingBottom="0sp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/name"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Thân Thái"
                android:textSize="18sp"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="10sp"
            android:background="@drawable/line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/email"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="thaibk210@gmail.com"
                android:textSize="18sp"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="10sp"
            android:background="@drawable/line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/telephone"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="+841675801065"
                android:textSize="18sp"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="10sp"
            android:background="@drawable/line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/notification"
                android:textSize="18sp"/>
            <Switch
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingRight="15sp"
                android:checked="true"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="10sp"
        android:layout_marginTop="0sp"
        android:background="@drawable/line"/>
</LinearLayout>
